SGT-159 sped up video to 1.5x and set flyout box to appear after video has finished, SGT-160 replaced final image with new image to stop blurriness

--- a/src/styles/_chapter-einstein-assistant.scss
+++ b/src/styles/_chapter-einstein-assistant.scss
@@ -33,7 +33,7 @@
   }
 
   .phone-step-5 {
-    background: url("../assets/images/chapters/chapter-einstein-assistant/done-6.jpg") center center no-repeat;
+    background: url("../assets/images/chapters/chapter-einstein-assistant/done-6-new.jpg") center center no-repeat;
   }
 
   .step {
